fix spacing/layout of social card images, and update divider to look more like figma

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,20 +26,29 @@ ul {
 /* hr styling creds: Glyph, by Harry Roberts */
 hr {
   overflow: visible; /* For IE */
-  padding: 0;
-  border: none;
-  border-top: medium double #333;
-  color: #333;
-  text-align: center;
+  border: 0;
+  margin-top: 1.3em;
+  margin-bottom: 1.3em;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc)
 }
 hr:after {
   content: "§";
-  font-weight: 100;
   display: inline-block;
   position: relative;
-  top: -0.7em;
-  font-size: 1.5em;
+  top: -0.75em;
   padding: 0 0.25em;
+
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+
+  color: #3C3C3C;
+  background: white;
 }
 
 a {
